--- a/ClientApp/src/app/pianoTiles/pianoTiles.component.html
+++ b/ClientApp/src/app/pianoTiles/pianoTiles.component.html
@@ -1,31 +1,50 @@
 
 
 <h1>
-  This is game
+  PianTiles
 </h1>
 
-<button (click)="start()" >start</button>
+<button class="btn btn-secondary" (click)="start()">{{textBtn()}}</button>
 
-<div class="board" >
+<div class="board">
 
-  <div  class="column">
-    <div *ngIf="tiles.one.exist" [@tileOne]=tiles.one.state class="tile" [attr.tile]="1" (@tileOne.start)="animationStarted($event)"
-        (@tileOne.done)="animationDone($event)" ></div>
-  </div>
-  
   <div class="column">
-    <div *ngIf="tiles.two.exist" [@tileTwo]=tiles.two.state class="tile" [attr.tile]="2" (@tileTwo.start)="animationStarted($event)"
-        (@tileTwo.done)="animationDone($event)"></div>
+    <ng-container *ngFor="let item of tiles | filterColumn:filterOne">
+      <div class="tile" [attr.tile]="item.id" [style.top.px]="item.top">
+        {{item.id}}
+      </div>
+    </ng-container>
   </div>
 
   <div class="column">
-    <div *ngIf="tiles.three.exist" [@tileThree]=tiles.three.state class="tile" [attr.tile]="3" (@tileThree.start)="animationStarted($event)"
-        (@tileThree.done)="animationDone($event)"></div>
+    <ng-container *ngFor="let item of tiles| filterColumn:filterTwo">
+      <div class="tile" [attr.tile]="item.id" [style.top.px]="item.top">
+        {{item.id}}
+      </div>
+    </ng-container>
   </div>
 
   <div class="column">
-    <div *ngIf="tiles.four.exist" [@tileFour]=tiles.four.state class="tile" [attr.tile]="4" (@tileFour.start)="animationStarted($event)"
-        (@tileFour.done)="animationDone($event)"></div>
+    <ng-container *ngFor="let item of tiles| filterColumn:filterThree">
+      <div class="tile" [attr.tile]="item.id" [style.top.px]="item.top">
+        {{item.id}}
+      </div>
+    </ng-container>
+  </div>
+
+  <div class="column">
+    <ng-container *ngFor="let item of tiles| filterColumn:filterFour">
+      <div class="tile" [attr.tile]="item.id" [style.top.px]="item.top">
+        {{item.id}}
+      </div>
+    </ng-container>
   </div>
 
 </div>
+
+
+
+<!--<div class="column">
+  <div *ngIf="tiles.one.exist" [@tileOne]=tiles.one.state class="tile" [attr.tile]="1" (@tileOne.start)="animationStarted($event)"
+       (@tileOne.done)="animationDone($event)"></div>
+</div>-->
