--- a/ClientApp/src/app/pianoTiles/pianoTiles.component.html
+++ b/ClientApp/src/app/pianoTiles/pianoTiles.component.html
@@ -7,7 +7,7 @@
 <button class="btn btn-secondary" (click)="start()">{{textBtn()}}</button>
 <span  class="m-3">key pressed : <strong>{{keyPressed}}</strong> </span>
 
-<span class="m-3">speed : <strong>{{speedDelay}}</strong> </span>
+<span class="m-3">Speed-Delay : <strong>{{speedDelay}}</strong> </span>
 
 <div class="board" >
 
