--- a/ClientApp/src/app/pianoTiles/pianoTiles.component.css
+++ b/ClientApp/src/app/pianoTiles/pianoTiles.component.css
@@ -32,17 +32,26 @@
   border-color: transparent;
   border-width: thin;
   border-style: solid;
-  transition: all 50ms linear;
+  /* transition-dur:50ms;*/
+  transition-property: all;
+  transition-timing-function: linear;
   color: white;
   color: darkslategrey; /*2f4f4f52*/
-  font-size: 5em;
+  font-size: 1vw;
   line-height: 168px;
   user-select: none;
-  animation: color_change_tile 0.4s infinite alternate;
+  text-align: center;
+/*  animation: color_change_tile 0.4s infinite alternate;*/
 }
+* {
+  user-select: none;
+}
+  .tile:hover {
+    box-shadow: inset 0 0 40px lightseagreen;
+  }
 
-@keyframes color_change_tile {
-  from {
+  @keyframes color_change_tile {
+    from {
     color: darkslategrey;
   }
   to {
