enable  audio  & background ref to 1cf1ed5 commit

--- a/ClientApp/src/app/pianoTiles/pianoTiles.component.html
+++ b/ClientApp/src/app/pianoTiles/pianoTiles.component.html
@@ -6,7 +6,7 @@
 
 <button   class="mx-1 btn btn-secondary" (click)="start()">{{textBtn()}}</button>
 
-<button (click)="flipSound()" [ngClass]="sound? 'mx-1 btn btn-warning' : 'mx-1 btn btn-outline-warning'" class="">Sound</button>
+<button (click)="flipSound()" [ngClass]="sound? 'mx-1 btn btn-warning' : 'mx-1 btn btn-outline-warning'">Sound</button>
 
 <span  class="m-3">key pressed : <strong>{{keyPressed}}</strong> </span>
 <span class="m-3">Speed-Delay : <strong>{{speedDelay}}</strong> </span>
